--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+                    <section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Mujeres Latinas en STEM</h2>
 							<p>En Estados Unidos de América, sólo el <b>0.0051% de la fuerza laboral total en STEM somos mujeres latinas</b>. 
@@ -95,7 +95,7 @@
 									<h3>Nuestra historia</h3>
 									<p>En abril de 2024 nació esta iniciativa a través de conversaciones como grupo de amigas residiendo en Berkeley, California.
                                     Nuestra realidad como mujeres migrantes es diferente a la realidad que viven mujeres hispánicas de primera generación o 
-                                        residentes permanentes, haciendo nuestra formación e incerción científica en Estados Unidos más díficil y vulnerable. </p>
+                                        residentes permanentes, haciendo nuestra formación e incerción científica en Estados Unidos más díficil y vulnerable.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-flask"></span>
@@ -115,9 +115,10 @@
                                         en los Estados Unidos de América.
                                         <br><br>
                                     <br>Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
-                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades prioritarias de nuestra comunidad.<br></p>
+                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades
+                                        prioritarias de nuestra comunidad.<br></p>
 								</section>
-                                <section>
+								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Sé parte de nuestra comunidad!</h3>
 									<p>Contesta este cuestionario para que unirte a nuestra lista de contactos, saber cómo podemos ayudarte, 
@@ -127,10 +128,12 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-globe"></span>
-									<h3>Mujeres latinas como agentes de cambio</h3>
-									<p>Con el patrocinio de la Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, y el Consulado de Chile en San Francisco, estamos organizando nuestro primer encuentro ¡Te estamos esperando! </p>
+									<h3>Mujeres Latinas en STEM como agentes de cambio</h3>
+									<p>Con el patrocinio de la Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, y 
+                                        el Consulado de Chile en San Francisco,
+                                        estamos organizando nuestro primer encuentro ¡Te estamos esperando!</p>
 								</section>
-								
+
 							</div>
 							<ul class="actions">
 								<li><a href="simposio.html" class="button">Nuestro 1er simposio!</a></li>
