--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
 									<p>Las co-fundadoras de Latinas en STEM somos: <b>B. Gabriela Arango, Ph.D.(c); Francesca Burgos-Bravo, Ph.D; Laura Gómez, Ph.D.(c);
                                         Diana Moreno-Santillan, Ph.D.; y M. Fernanda Palominos, Ph.D.</b> Emigramos a Estados Unidos de América desde <b>México, Chile, y Colombia</b>, 
                                         en distintos niveles de nuestra formación científica. 
-                                        <br>Comenzamos como un pequeño grupo de amigas buscando cambiar la realidad de las Latinas en STEM en Estados Unidos, con la idea de generar
-                                        comunidad entre nosotras, brindar oportunidades y apoyo a más mujeres latinas que tengan deseos de migrar, pero también incentivar a las
-                                        nuevas generaciones de mujeres científicas <br>
+
                                         ¡Queremos que tú también seas parte de este lindo proyecto!</p>
 								</section>
 								<section>
@@ -114,9 +112,9 @@
 									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
                                         en los Estados Unidos de América.
                                         <br><br>
-                                    <br>Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
+                                    Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
                                         de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades
-                                        prioritarias de nuestra comunidad.<br></p>
+                                        prioritarias de nuestra comunidad.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
@@ -124,23 +122,32 @@
 									<p>Contesta este cuestionario para que unirte a nuestra lista de contactos, saber cómo podemos ayudarte, 
                                     cuales son tus necesidades, y cómo te gustaría involucrante en nuestra organización.
                                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"><b>Pincha aquí para contestar el cuestionario.</b></span></a>
+                                     <br> <br>
+                                    Comenzamos como un pequeño grupo de amigas buscando cambiar la realidad de las Latinas en STEM en Estados Unidos, con la idea de generar
+                                    comunidad entre nosotras, brindar oportunidades y apoyo a más mujeres latinas que tengan deseos de migrar, pero también incentivar a las
+                                    nuevas generaciones de mujeres científicas
                                     </p>
+								</section>
+								<section>
+									<span class="icon solid major fa-globe"></span>
+									<h3>No deberíamos ser la excepción</h3>
+									<p>Para que más mujeres latinas podamos encontrar nuestro camino como científicas, es necesario visualizar no sólo nuestro trabajo,
+                                    sino también nuestro camino personal para hacer ciencia.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-globe"></span>
 									<h3>Mujeres Latinas en STEM como agentes de cambio</h3>
 									<p>Con el patrocinio de la Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, y 
                                         el Consulado de Chile en San Francisco,
-                                        estamos organizando nuestro primer encuentro ¡Te estamos esperando!</p>
+                                        estamos organizando nuestro primer encuentro en el Área de la Bahía, CA. ¡Te estamos esperando!</p>
 								</section>
-
 							</div>
 							<ul class="actions">
-								<li><a href="simposio.html" class="button">Nuestro 1er simposio!</a></li>
+								<li><a href="simposio.html" class="button">Nuestro primer simposio!</a></li>
 							</ul>
 						</div>
 					</section>
-
+                
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
