--- a/simposio.html
+++ b/simposio.html
@@ -21,7 +21,6 @@
 					<ul>
 						<li><a href="index.html">Nosotras</a></li>
 						<li><a href="simposio.html" class="active">1er Simposio</a></li>
-						<li><a href="cuestionario.html">Registración</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,17 +31,24 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">El viaje de las mujeres latinoamericanas STEM en EE.UU.</h1>
-							<span class="image fit"><img src="images/aficheOficial.png" alt="" /></span>
+							<h1 class="major">1er simposio Latinas en STEM residiendo en EE.UU.</h1>
+							<span class="image fit"><img src="images/aficheOficial.jpg" alt="" /></span>
 							<p>Si puedes viajar, o vives en el Área de la Bahía, California, queremos invitarte a participar de <b>nuestro primer encuentro
                                 presencial, totalmente gratuito, que se realizará el viernes 18 de Octubre de 2024, de 8:30 am - 5:30 pm</b>, en el Consulado
-                                General de México en San Francisco. Este encuentro será en español, y también será transmitido por live-streaming. 
-                                <u>La registración para el simposio comenzará la segunda semana de Agosto <b>¡te esperamos!</b></u></p>
+                                General de México en San Francisco. 
+                                
+                                <p>La registración para el nuestro simposio está abierta para <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-presencial-tickets-971551916937"><span class="label">participación presencial</span></a> 
+                                    (in-person)</b> y <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-virtual-tickets-1003142104037"><span class="label">virtual (live-streaming)</span></a></b> ¡te esperamos!</p>
 							<p>Las invitadas magistrales a nuestro simposio son: 
-                            <br><b>Dr. Daiana Andrea Capdevilla</b>, química argentina, galardoneada con la beca L'Oréal-UNESCO "Mujeres en la Ciencia" por sus estudios
+                                <br><b>Dr. Lúcia G. Lohmann</b>, botanista brasileña, elegida como miembro de la American Academy of Arts & Sciences desde 2021, fue profesora en el 
+                                Dpto. de Botánica de la Universidad de São Paulo desde 2004. Hoy es Profesora del Departamento de Biología Integrativa de UC Berkeley, y es la flamante 
+                                Directora del University y Jepsom Herbarium. Los logros de Lúcia son incontables, tanto en Latinoamérica como en Estados Unidos. Su investigación integra taxonomía, 
+                                sistemática molcular, ecología, biogeografía, y evolución de plantas neotropicales.<br>
+                            
+                                <br><b>Dr. Daiana Andrea Capdevilla</b>, química argentina, galardoneada con la beca L'Oréal-UNESCO "Mujeres en la Ciencia" por sus estudios
                                 revolucionarios acerca de la contaminación de aguas. Daiana hizo su investigación postdoctoral en Northwestern University, EE.UU.,
                                 y actualmente es investigadora principal en la Fundación Instituto Leloir.<br>
-                                <br><b>Dr. Kelly M. Cautivo</b>, inmunólogca chilena, fue investigadora
+                                <br><b>Dr. Kelly M. Cautivo</b>, inmunóloga chilena, fue investigadora
                                 Postdoctoral en la University of California, San Francisco, en EE.UU., pero gracias a su trabajo innovador en la regulación de la inflamación
                                 por interferon gamma y linfocitos, es hoy en día investigadora en la compañía biofarmaceútica Gilead Sciences, en Foster City, California.<br>
                                 <br><b>Dr. N. Cecilia Martínez-Gomez</b>, microbióloga mexicana, es actualmente Profesora Asociada de la Universtiy of California, Berkeley, en el 
