--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Latinas en STEM en U.S.A.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +17,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Bienvenida!</a></li>
-							<li><a href="#one">Quienes somos</a></li>
+							<li><a href="#one">Quienes somos</a></li>    
+                            
 						</ul>
 					</nav>
 				</div>
@@ -44,7 +42,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/logo.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/logo.png" alt="" data-position="center center" /></a>
 							<div class="content">
                                 <div class="inner">
 									<h2>Representación</h2>
