--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<div class="inner">
 							<h2>Contáctanos!</h2>
 							<p>Puedes encontrarnos en todas las plataformas de redes sociales o escribirnos directamente a nuestro correo electrónico. Queremos saber de tí!</p>
-							<div class="split style1">
+							<div class="inner">
 								<section>
 								</section>
 								<section>
