--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Bienvenida!</a></li>
-							<li><a href="#one">Quienes somos</a></li>    
+							<li><a href="#one">Quienes somos</a></li>   
+				            <li><a href="simposio.html">Primer simposio!</a></li>
                             
 						</ul>
 					</nav>
@@ -143,7 +144,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="simposio.html" class="button"> Participa en nuestro primer simposio!</a></li>
+								<li><a href="simposio.html" class="button"> Ven a nuestro primer simposio!</a></li>
 							</ul>
 						</div>
 					</section>
@@ -153,7 +154,7 @@
 						<div class="inner">
 							<h2>Contáctanos!</h2>
 							<p>Puedes encontrarnos en todas las plataformas de redes sociales o escribirnos directamente a nuestro correo electrónico. Queremos saber de tí!</p>
-							<div class="inner">
+							<div class="split style1">
 								<section>
 								</section>
 								<section>
