--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     sino también nuestro camino personal para hacer ciencia.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-globe"></span>
+									<span class="icon solid major fa-fire"></span>
 									<h3>Mujeres Latinas en STEM como agentes de cambio</h3>
 									<p>Con el patrocinio de la <b>Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, 
                                         el Consulado de Chile en San Francisco, y el Consejo Chile-California</b>,
