--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								<section>
 								</section>
 								<section>
-									<ul class="contact">
+									<ul class="split style1">
 
 										<li>
 											<h3>Email</h3>
@@ -174,7 +174,7 @@
 								    <a href="#" class="image">
                                     <img src="images/patrocinadores.jpg" alt="" style="width: 100%; height: 100%;" />
                                     </a></h3></li>
-								        <li><h3>
+								    <li><h3>
 								    <a href="#" class="image">
                                     <img src="images/mediapartners.jpg" alt="" style="width: 100%; height: 100%;" />
                                     </a></h3></li>
