--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<h2>Contáctanos!</h2>
 							<p>Puedes encontrarnos en todas las plataformas de redes sociales o escribirnos 
                                 directamente a nuestro correo electrónico. Queremos saber de tí!</p>
-							<div class="split style1">
+							<div class="inner">
 								<section>
 
 											<h3>Email</h3>
@@ -169,7 +169,7 @@
                                     </ul>
                                      <p></p>
                                 </section>
-                <section id="four" class="wrapper style1 fade-up">
+                <section id="four" class="inner">
 
                                             <h3>
 								    <a href="#" class="image">
