--- a/simposio.html
+++ b/simposio.html
@@ -41,9 +41,9 @@
                                     (in-person)</b> y <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-virtual-tickets-1003142104037"><span class="label">virtual (live-streaming)</span></a></b> ¡te esperamos!</p>
 							<p>Las invitadas magistrales a nuestro simposio son: 
                                 <br><b>Dr. Lúcia G. Lohmann</b>, botanista brasileña, elegida como miembro de la American Academy of Arts & Sciences desde 2021, fue profesora en el 
-                                Dpto. de Botánica de la Universidad de São Paulo desde 2004. Hoy es Profesora del Departamento de Biología Integrativa de UC Berkeley, y es la flamante 
-                                Directora del University y Jepsom Herbarium. Los logros de Lúcia son incontables, tanto en Latinoamérica como en Estados Unidos. Su investigación integra taxonomía, 
-                                sistemática molcular, ecología, biogeografía, y evolución de plantas neotropicales.<br>
+                                Dpto. de Botánica de la Universidad de São Paulo desde 2004, y desde 2024, Profesora del Departamento de Biología Integrativa de UC Berkeley, y 
+                                Directora del University y Jepsom Herbarium de UC Berkeley. Los logros de Lúcia son incontables, tanto en Latinoamérica como en Estados Unidos. Su investigación integra taxonomía, 
+                                sistemática molecular, ecología, biogeografía, y evolución de plantas neotropicales.<br>
                             
                                 <br><b>Dr. Daiana Andrea Capdevilla</b>, química argentina, galardoneada con la beca L'Oréal-UNESCO "Mujeres en la Ciencia" por sus estudios
                                 revolucionarios acerca de la contaminación de aguas. Daiana hizo su investigación postdoctoral en Northwestern University, EE.UU.,
