--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         en los Estados Unidos de América.
                                         <br><br>
                                     Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
-                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades
+                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros anuales</b> para facilitar la comunicación directa e identificación de las necesidades
                                         prioritarias de nuestra comunidad.</p>
 								</section>
 								<section>
