--- a/simposio.html
+++ b/simposio.html
@@ -55,9 +55,9 @@
                                 Departamento de Plant and Microbial Biology. La investigación de Ceci tiene como objetivo impulsar plataformas bacterianas para mejorar 
                                 las industrias agrícolas y energéticas, enfocándose en la biorremediación, biolixiviación, y el reciclaje de residuos electrónicos.<br></p>
                             <p>También contaremos con la participación de las siguientes panelistas: <b>Dr. Estefanía Sánchez-Vasquez</b>, bióloga del desarrollo peruana, que investiga
-                                modelos de desarrollo humano temprano; <b>Dr.(c) Valeria Ramírez-Castañeda</b>, bióloga evolutiva y herpetóloga, cuya investigación está enfocada en la
-                                conservación de la herpetofauna y su relación con comunidades amazónicas; y la <b>Ms. Javiera Canales-Valenzuela</b>, físicoquímica chilena, cuya
-                                investigación se enfoca en el desarrollo de sistemas urbanos sustentables. </p>
+                                modelos de desarrollo humano temprano; <b>Dr.(c) y Ms. Valeria Ramírez-Castañeda</b>, bióloga evolutiva y herpetóloga, cuya investigación está enfocada en la
+                                conservación de la herpetofauna y su relación con comunidades amazónicas; y la <b>Dr.(c) y Ms. M. Gabriela Mendoza</b>, Ingeniera mecánica ecuatoriana, especialista en industria
+				aeroespacial. </p>
 						</div>
 					</section>
 
