--- a/simposio.html
+++ b/simposio.html
@@ -39,6 +39,7 @@
                                 
                                 <p>La registración para el nuestro simposio está abierta para <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-presencial-tickets-971551916937"><span class="label">participación presencial</span></a> 
                                     (in-person)</b> y <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-virtual-tickets-1003142104037"><span class="label">virtual (live-streaming)</span></a></b> ¡te esperamos!</p>
+							<p> <a href="https://drive.google.com/file/d/1Xc7_RXOUMIqV4XALjnsLyNPThIgGQBOT/view"><span class="label">DESCARGA EL PROGRAMA COMPLETO DE NUESTRO PRIMER SIMPOSIO</span></a></p>
 							<p>Las invitadas magistrales a nuestro simposio son: 
                                 <br><b>Dr. Lúcia G. Lohmann</b>, botanista brasileña, elegida como miembro de la American Academy of Arts & Sciences desde 2021, fue profesora en el 
                                 Dpto. de Botánica de la Universidad de São Paulo desde 2004, y desde 2024, Profesora del Departamento de Biología Integrativa de UC Berkeley, y 
