--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 
--->
 <html>
 	<head>
 		<title>Latinas en STEM en U.S.A.</title>
@@ -17,10 +16,12 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Bienvenida!</a></li>
-							<li><a href="#one">Quienes somos</a></li>   
-				            <li><a href="simposio.html">Primer simposio!</a></li>
-                            		    <li><a href="https://drive.google.com/file/d/1h8978hSWhwOY4PHu_K2BiGi5-xAav6qP/view">DESCARGA EL PROGRAMA!</a></li>
+							<li><a href="#one">Mujeres Latinas en STEM</a></li>   
+				            <li><a href="quienesSomos.html">Quienes Somos</a></li>
+							<li><a href="simposio.html">Primer simposio!</a></li>
+							<li><a href="https://drive.google.com/file/d/1h8978hSWhwOY4PHu_K2BiGi5-xAav6qP/view?usp=sharing">Programa simposio!</a></li>
 
+							
 						</ul>
 					</nav>
 				</div>
@@ -44,7 +45,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/logo.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/logo_1.png" alt="" data-position="center center" /></a>
 							<div class="content">
                                 <div class="inner">
 									<h2>Representación</h2>
@@ -58,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/represent.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/represent_1.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Educación</h2>
@@ -67,7 +68,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/empleo.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/empleo_1.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Empleo</h2>
@@ -89,25 +90,7 @@
                                 <br>Del 17% total de hombres y mujeres hispanoaméricanos trabajando en STEM, el 3% son mujeres (Fuente: PEW Research Center).<br>
                             <br><b>¡Queremos cambiar esta realidad!</b><br></p>
 							<div class="features">
-								<section>
-									<span class="icon solid major fa-heart"></span>
-									<h3>Nuestra historia</h3>
-									<p>En abril de 2024 nació esta iniciativa a través de conversaciones como grupo de amigas residiendo en Berkeley, California.
-                                    Nuestra realidad como mujeres migrantes es diferente a la realidad que viven mujeres hispánicas de primera generación o 
-                                        residentes permanentes, haciendo nuestra formación e incerción científica en Estados Unidos más díficil y vulnerable.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-flask"></span>
-									<h3>Quienes somos</h3>
-                                    <a href="#" class="image">
-                                    <img src="images/todas.jpg" alt="" style="width: 100%; height: 100%;" />
-                                    </a>									
-                                    <p>Las co-fundadoras de Latinas en STEM somos: <b>B. Gabriela Arango, Ph.D.(c); Francesca Burgos-Bravo, Ph.D; Laura Gómez, Ph.D.(c);
-                                        Diana Moreno-Santillan, Ph.D.; y M. Fernanda Palominos, Ph.D.</b> Emigramos a Estados Unidos de América desde <b>México, Chile, y Colombia</b>, 
-                                        en distintos niveles de nuestra formación científica. 
 
-                                        ¡Queremos que tú también seas parte de este lindo proyecto!</p>
-								</section>
 								<section>
 									<span class="icon solid major fa-microscope"></span>
 									<h3>Nuestros objetivos</h3>
@@ -115,7 +98,7 @@
                                         en los Estados Unidos de América.
                                         <br><br>
                                     Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
-                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros anuales</b> para facilitar la comunicación directa e identificación de las necesidades
+                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades
                                         prioritarias de nuestra comunidad.</p>
 								</section>
 								<section>
@@ -136,17 +119,9 @@
 									<p>Para que más mujeres latinas podamos encontrar nuestro camino como científicas, es necesario visualizar no sólo nuestro trabajo,
                                     sino también nuestro camino personal para hacer ciencia.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-fire"></span>
-									<h3>Mujeres Latinas en STEM como agentes de cambio</h3>
-									<p>Con el patrocinio de la <b>Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, 
-                                        el Consulado de Chile en San Francisco, y el Consejo Chile-California</b>,
-                                        estamos organizando nuestro primer encuentro en el Área de la Bahía, CA. ¡Te estamos esperando!</p>
-								</section>
+
 							</div>
-							<ul class="actions">
-								<li><a href="simposio.html" class="button"> Ven a nuestro primer simposio!</a></li>
-							</ul>
+
 						</div>
 					</section>
                 
