--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -39,8 +39,9 @@
 									<span class="icon solid major fa-heart"></span>
 									<h2>Nuestra historia</h2>
 									<p>En abril de 2024 nació esta iniciativa a través de conversaciones como grupo de amigas residiendo en Berkeley, California.
-                                    Nuestra realidad como mujeres migrantes es diferente a la realidad que viven mujeres hispánicas de primera generación o 
-                                        residentes permanentes, haciendo nuestra formación e incerción científica en Estados Unidos más díficil y vulnerable.</p>
+                                    Las mujeres migrantes en Estados Unidos experimentamos complejidades y limitaciones no sólo a nivel de nuestra formación cientifica, sino también desde un punto de vista personal. 
+                                        Emigrar no es fácil. Persiguiendo nuestros sueños dejamos atrás nuestra cultura, idioma, familia, y seres queridos. Cuando emigramos con nuestras familias, 
+                                        lo hacemos también con la carga financiera y emocional que esto conlleva.</p>
 								</section>
                                          
                             <p>Las co-fundadoras de Latinas en STEM somos: 
