--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Quienes somos</h1>
-							<span class="image fit"><img src="images/todas_1.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/todas.jpg" alt="" /></span>
                                                  
                                 <section>
 									<span class="icon solid major fa-heart"></span>
