--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 							<div class="content">
                                 <div class="inner">
 									<h2>Representación</h2>
-									<p>En el mundo, <b>las mujeres representamos el 28% de los investigadores en el mundo </b>(Fuente: UNESCO Science Report, 2021). 
+									En el mundo, <b>las mujeres representamos el 28% de los investigadores en el mundo </b>(Fuente: UNESCO Science Report, 2021). 
                                         Sin embargo, en <b>Estados Unidos, los latinos representamos el 17% total de la fuerza laboral en STEM. Las mujeres latinas
-                                        en STEM, sin embargo, representamos un porcentaje aún menor</b> debido a múltiples barreras sociales, culturales, y educacionales</p>
+                                        en STEM, sin embargo, representamos un porcentaje aún menor</b> debido a múltiples barreras sociales, culturales, y educacionales
                                 </div>
 							</div>
 						</section>
