--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -59,16 +59,16 @@
                 <section>
 									<span class="icon solid major fa-heart"></span>
 									<h2>Mujeres Latinas en STEM como agentes de cambio:</h2>
-									<p>Con el patrocinio de la 
-                                        <p><b>Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, 
+									<p>Con el patrocinio de:
+                                        <p><b>La Embajada de Chile en Estados Unidos, del Consulado General de México en San Francisco, 
                                         el Consulado de Chile en San Francisco, el Consejo Chile-California, Berkeley Postdoc Association, 
-                                            y la Dean's Office of College of Letters & Science, University of California, Berkeley</b>,
-                                        estamos organizando nuestro primer encuentro en el Área de la Bahía, CA. ¡Te esperamos!</p>
+                                            y la Dean's Office of the College of Letters & Science at the University of California, Berkeley</b>,
+						 organizamos nuestro primer encuentro en el Área de la Bahía, CA. ¡Revisa nuestro primer encuentro!</p>
 
 				</section>
                             
 							<ul class="actions">
-								<li><a href="simposio.html" class="button"> Ven a nuestro primer simposio!</a></li>
+								<li><a href="simposio.html" class="button"> Revisa nuestro 1er Encuentro!</a></li>
 							</ul>
                                 
 						</div>
