--- a/simposio.html
+++ b/simposio.html
@@ -33,14 +33,19 @@
 						<div class="inner">
 							<h1 class="major">1er simposio Latinas en STEM residiendo en EE.UU.</h1>
 							<span class="image fit"><img src="images/aficheOficial.jpg" alt="" /></span>
-							<p>Si puedes viajar, o vives en el Área de la Bahía, California, queremos invitarte a participar de <b>nuestro primer encuentro
-                                presencial, totalmente gratuito, que se realizará el viernes 18 de Octubre de 2024, de 8:30 am - 5:30 pm</b>, en el Consulado
+							<p>Realizamos <b>nuestro primer encuentro
+                                presencial, totalmente gratuito, este pasado viernes 18 de Octubre de 2024</b>, en el Consulado
                                 General de México en San Francisco. 
                                 
-                                <p>La registración para el nuestro simposio está abierta para <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-presencial-tickets-971551916937"><span class="label">participación presencial</span></a> 
-                                    (in-person)</b> y <b><a href="https://www.eventbrite.com/e/forjando-nuevas-fronteras-en-las-ciencias-virtual-tickets-1003142104037"><span class="label">virtual (live-streaming)</span></a></b> ¡te esperamos!</p>
 							<p> <b><a href="https://drive.google.com/file/d/1h8978hSWhwOY4PHu_K2BiGi5-xAav6qP/view?usp=sharing"><span class="label">DESCARGA EL PROGRAMA COMPLETO DE NUESTRO PRIMER SIMPOSIO</span></a></b></p>
-							<p>Las invitadas magistrales a nuestro simposio son: 
+							<p> Más de 50 mujeres latinas en STEM asistieron al simposio de manera presencial, mientras que otras 20 asistieron de manera virtual, desde distintas partes del mundo. 
+							Estamos muy contentas del recibimiento de nuestra organización, y estamos agradecidas del gran encuentro que tuvimos. La contribución de cada una de Uds. -como también de nuestros patrocinadores y media partners- fue clave
+							para el éxito de este encuentro. Gracias por ayudarnos a construir un espacio de aprendizaje, colaboración mutua, y motivación. </p>
+							
+							<p> <b><a href="https://www.youtube.com/watch?v=vrHLChid8IE"><span class="label">REVISA AQUÍ EL VIDEO RESUMEN DE NUESTRO PRIMER ENCUENTRO</span></a></b></p>
+							<p> <b><a href="https://drive.google.com/drive/folders/1vGgTdv-HQPIeiiLwb_7deJmCE7THv57a"><span class="label">REVISA AQUÍ LAS FOTOS DE NUESTRO PRIMER ENCUENTRO</span></a></b></p>
+
+							<p>Las invitadas magistrales a nuestro simposio fueron: 
                                 <br><b>Dr. Lúcia G. Lohmann</b>, botanista brasileña, elegida como miembro de la American Academy of Arts & Sciences desde 2021, fue profesora en el 
                                 Dpto. de Botánica de la Universidad de São Paulo desde 2004, y desde 2024, Profesora del Departamento de Biología Integrativa de UC Berkeley, y 
                                 Directora del University y Jepsom Herbarium de UC Berkeley. Los logros de Lúcia son incontables, tanto en Latinoamérica como en Estados Unidos. Su investigación integra taxonomía, 
@@ -55,7 +60,7 @@
                                 <br><b>Dr. N. Cecilia Martínez-Gomez</b>, microbióloga mexicana, es actualmente Profesora Asociada de la Universtiy of California, Berkeley, en el 
                                 Departamento de Plant and Microbial Biology. La investigación de Ceci tiene como objetivo impulsar plataformas bacterianas para mejorar 
                                 las industrias agrícolas y energéticas, enfocándose en la biorremediación, biolixiviación, y el reciclaje de residuos electrónicos.<br></p>
-                            <p>También contaremos con la participación de las siguientes panelistas: <b>Dr. Estefanía Sánchez-Vasquez</b>, bióloga del desarrollo peruana, que investiga
+                            <p>También contamos con la participación de las  panelistas: <b>Dr. Estefanía Sánchez-Vasquez</b>, bióloga del desarrollo peruana, que investiga
                                 modelos de desarrollo humano temprano; <b>Dr.(c) y Ms. Valeria Ramírez-Castañeda</b>, bióloga evolutiva y herpetóloga, cuya investigación está enfocada en la
                                 conservación de la herpetofauna y su relación con comunidades amazónicas; y la <b>Dr.(c) y Ms. M. Gabriela Mendoza</b>, Ingeniera mecánica ecuatoriana, especialista en industria
 				aeroespacial. </p>
