--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<li><a href="#one">Mujeres Latinas en STEM</a></li>   
 				            <li><a href="quienesSomos.html">Quienes Somos</a></li>
 							<li><a href="simposio.html">Primer simposio!</a></li>
-							<li><a href="https://drive.google.com/file/d/1h8978hSWhwOY4PHu_K2BiGi5-xAav6qP/view?usp=sharing">Programa simposio!</a></li>
+							<li><a href="https://www.youtube.com/watch?v=vrHLChid8IE">Video del encuentro!</a></li>
 
 							
 						</ul>
