--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -16,11 +16,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Mujeres Latinas en STEM</a>
-                				<a href="index.html" class="subtitle">Una organización de y para nosotras, las científicas latinas inmigrantes en E.E.U.U.</a>
+				<a href="index.html" class="title">Mujeres Latinas en Stem</a>
+                				<a href="index.html"</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Representación</a></li>
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="quienesSomos.html" class="active">Quienes somos</a></li>
 						<li><a href="simposio.html" class="active">1er Simposio</a></li>
 					</ul>
 				</nav>
