--- a/simposio.html
+++ b/simposio.html
@@ -19,8 +19,8 @@
 				<a href="index.html" class="title">Latinas en STEM</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Nosotras</a></li>
-						<li><a href="simposio.html" class="active">1er Simposio</a></li>
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="quienesSomos.html">Quienes Somos</a></li>
 					</ul>
 				</nav>
 			</header>
