--- a/simposio.html
+++ b/simposio.html
@@ -42,7 +42,10 @@
 							Estamos muy contentas del recibimiento de nuestra organización, y estamos agradecidas del gran encuentro que tuvimos. La contribución de cada una de Uds. -como también de nuestros patrocinadores y media partners- fue clave
 							para el éxito de este encuentro. Gracias por ayudarnos a construir un espacio de aprendizaje, colaboración mutua, y motivación. </p>
 							
-							<p> <b><a href="https://www.youtube.com/watch?v=vrHLChid8IE"><span class="label">REVISA AQUÍ EL VIDEO RESUMEN DE NUESTRO PRIMER ENCUENTRO</span></a></b></p>
+				<div style="text-align: center; margin: 20px 0;">
+				    <iframe width="560" height="315" src="https://www.youtube.com/embed/vrHLChid8IE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+								
 							<p> <b><a href="https://drive.google.com/drive/folders/1vGgTdv-HQPIeiiLwb_7deJmCE7THv57a"><span class="label">REVISA AQUÍ LAS FOTOS DE NUESTRO PRIMER ENCUENTRO</span></a></b></p>
 
 							<p>Las invitadas magistrales a nuestro simposio fueron: 
