--- a/index.html
+++ b/index.html
@@ -172,4 +172,15 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+								<script>
+    // Select the toggle button and sidebar
+    const toggleButton = document.getElementById('sidebar-toggle');
+    const sidebar = document.getElementById('sidebar');
+
+    // Add click event to toggle visibility
+    toggleButton.addEventListener('click', () => {
+        sidebar.classList.toggle('visible');
+    });
+</script>
+
 </html>
