--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Sé parte de nuestra comunidad!</h3>
-									<p>Contesta este cuestionario para que unirte a nuestra lista de contactos, saber cómo podemos ayudarte, 
-                                    cuales son tus necesidades, y cómo te gustaría involucrante en nuestra organización.
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"><b>Pincha aquí para contestar el cuestionario.</b></span></a>
+									<p>Contesta este <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"><b> cuestionario /b></span>
+									para que unirte a nuestra lista de contactos<</a>
                                      <br> <br>
                                     Comenzamos como un pequeño grupo de amigas buscando cambiar la realidad de las Latinas en STEM en Estados Unidos, con la idea de generar
                                     comunidad entre nosotras, brindar oportunidades y apoyo a más mujeres latinas que tengan deseos de migrar, pero también incentivar a las
@@ -109,9 +108,10 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-globe"></span>
-									<h3>No deberíamos ser la excepción</h3>
-									<p>Para que más mujeres latinas podamos encontrar nuestro camino como científicas, es necesario visualizar no sólo nuestro trabajo,
-                                    sino también nuestro camino personal para hacer ciencia.</p>
+									<h3>Nuestro primer simposio</h3>
+									<p>Video resumen de nuestro primer encuentro en 2024
+									<a href="https://www.youtube.com/watch?v=vrHLChid8IE"><span class="label"><b> aquí!! /b></span>
+									</p>
 								</section>
 
 							</div>
