--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
 								<section>
 									<span class="icon solid major fa-globe"></span>
 									<h3>Nuestro primer simposio</h3>
-									<p>Video resumen de nuestro primer encuentro en 2024
-									<a href="https://www.youtube.com/watch?v=vrHLChid8IE"><span class="label"><b> aquí!! /b></span>
+									<p> Aquí el video resumen de nuestro primer encuentro en 2024
+										<iframe width="280" height="157" src="https://www.youtube.com/embed/vrHLChid8IE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+
 									</p>
 								</section>
 
