--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Sé parte de nuestra comunidad!</h3>
-									<p>Contesta este <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"><b> cuestionario /b></span>
+									<p>Contesta este <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"> <b>cuestionario </b> </span>
 									para que unirte a nuestra lista de contactos<</a>
                                      <br> <br>
                                     Comenzamos como un pequeño grupo de amigas buscando cambiar la realidad de las Latinas en STEM en Estados Unidos, con la idea de generar
