--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
 
 						</div>
 					</section>
-                
+			
+				<!-- Two & a half-->
+                    <section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Nuestro primer encuentro!</h2>
+							<p>Revisa este video resumen de nuestro primer encuentro en California, este 2024.</p>
+
 				<!-- Three -->
                 <section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
