--- a/index.html
+++ b/index.html
@@ -84,8 +84,26 @@
                                 <br>Del 17% total de hombres y mujeres hispanoaméricanos trabajando en STEM, el 3% son mujeres (Fuente: PEW Research Center).<br>
                             <br><b>¡Queremos cambiar esta realidad!</b><br></p>
 							<div class="features">
-
 								<section>
+									<span class="icon solid major fa-microscope"></span>
+									<h3>Nuestros objetivos</h3>
+									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
+                                        en los Estados Unidos de América.
+                                        <br><br>
+                                    Queremos <b>fomentar la colaboración científica entre nosotras</b> a través de la creación de un directorio público, permanente y de auto-integración que permita una búsqueda fácil
+                                        de la científica y su área de especialización y contacto, además de <b>organizar encuentros bi-anuales</b> para facilitar la comunicación directa e identificación de las necesidades
+                                        prioritarias de nuestra comunidad.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>Sé parte de nuestra comunidad!</h3>
+									<p>Contesta este <a href="https://docs.google.com/forms/d/e/1FAIpQLSeALIuxp8AQBma1XKcBImA7VmfV6f6atx7s18lpE_p6R0eXtg/viewform?usp=sharing"><span class="label"> <b>cuestionario </b> </span>
+									para que unirte a nuestra lista de contactos</a>
+                                     <br> <br>
+                                    Comenzamos como un pequeño grupo de amigas buscando cambiar la realidad de las Latinas en STEM en Estados Unidos, con la idea de generar
+                                    comunidad entre nosotras, brindar oportunidades y apoyo a más mujeres latinas que tengan deseos de migrar, pero también incentivar a las
+                                    nuevas generaciones de mujeres científicas
+                                    </p>
 									<span class="icon solid major fa-microscope"></span>
 									<h3>Nuestros objetivos</h3>
 									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
@@ -111,12 +129,6 @@
 
 						</div>
 					</section>
-			
-				<!-- Two & a half-->
-                    <section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Nuestro primer encuentro!</h2>
-							<p>Revisa este video resumen de nuestro primer encuentro en California, este 2024.</p>
 
 				<!-- Three -->
                 <section id="three" class="wrapper style1 fade-up">
