--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                                     comunidad entre nosotras, brindar oportunidades y apoyo a más mujeres latinas que tengan deseos de migrar, pero también incentivar a las
                                     nuevas generaciones de mujeres científicas
                                     </p>
+								</section>
+								<section>
 									<span class="icon solid major fa-microscope"></span>
 									<h3>Nuestros objetivos</h3>
 									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
