--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <br><b>¡Queremos cambiar esta realidad!</b><br></p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-microscope"></span>
+									<span class="icon solid major fa-child-reaching"></span>
 									<h3>Nuestros objetivos</h3>
 									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
                                         en los Estados Unidos de América.
@@ -111,7 +111,7 @@
                                     sino también nuestro camino personal para hacer ciencia.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
+									<span class="icon solid major fa-video-camera"></span>
 									<h3>Revisa el video de nuestro primer encuentro!</h3>
 									<p> Gracias a las más de <b>50 científicas latinas</b> que participaron en el encuentro en California este Octubre de 2024! 
 									Su contribución hizo de esto un encuentro único.
