--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 									<h2>Empleo</h2>
 									<p>A nivel de <b>Profesor, 
                                         en Estados Unidos, las mujeres latinas representamos menos del 2.5% del profesorado contando todas los áreas y disciplinas de investigación </b> 
-                                        (National Center for Education Statistics). Sumado a la baja representación de las mujeres latinas en STEM, las mujeres latinas y negras en STEM reciben un salario 37% 
-                                        inferior en comparación a los hombres en trabajos similares (American Association of University Women).</p>
+                                        (National Center for Education Statistics). Sumado a la baja representación, las mujeres latinas y negras en STEM reciben un salario 37% 
+                                        inferior a los hombres en trabajos similares (AA of University Women).</p>
 
 								</div>
 							</div>
