--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <br><b>¡Queremos cambiar esta realidad!</b><br></p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-microscope"></span>
+									<span class="icon solid major fa-thumbs-up"></span>
 									<h3>Nuestros objetivos</h3>
 									<p>Nuestro objetivo principal es <b>la promoción de una red de colaboración científica y personal de mujeres migrantes</b>, y sus familias, 
                                         en los Estados Unidos de América.
@@ -105,10 +105,11 @@
                                     </p>
 								</section>
 								<section>
-									<span class="icon solid major fa-thumbs-up"></span>
-									<h3>Nuestros objetivos</h3>
-									<p>Para que más mujeres latinas podamos encontrar nuestro camino como científicas, es necesario visualizar no sólo nuestro trabajo,
-                                    sino también nuestro camino personal para hacer ciencia.</p>
+									<span class="icon solid major fa-heart"></span>
+									<h3>No deberíamos ser la excepción</h3>
+									<p>Para que más mujeres latinas podamos encontrar nuestro camino como científicas, 
+										es necesario visualizar <b>no sólo nuestro trabajo,
+                                    sino también nuestro camino personal para hacer ciencia</b>.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-video"></span>
