--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-video"></span>
-									<h3>Revisa el video de nuestro primer encuentro!</h3>
+									<h3>Revisa el video de nuestro <li><a href="https://latinasenstem.github.io/simposio.html">primer encuentro!</a></li></h3>
 									<p> Gracias a las más de <b>50 científicas latinas</b> que participaron en el encuentro en California este Octubre de 2024! 
 									Su contribución hizo de esto un encuentro único.
 				    					<iframe width="280" height="157" src="https://www.youtube.com/embed/vrHLChid8IE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
